ft(email-verification):Implement ft-email-verification-168675532
- Implement ft-email-verification-168675532

[Finishes #168675532]
